网页获取汇率以列表形式输出

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.First">
         <activity
+            android:name=".rate_list"
+            android:exported="true" />
+        <activity
+            android:name=".MyListActivity"
+            android:exported="true" />
+        <activity
             android:name=".huilvv"
             android:exported="true" />
         <activity
