--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.First">
+        android:theme="@style/Theme.First"
+        android:usesCleartextTraffic="true">
+
         <activity
             android:name=".RateCalcActivity"
             android:exported="true" />
         <activity
             android:name=".rate_list_activity2"
             android:exported="true" />
+        <!--
         <activity
-            android:name=".MainActivity2"
-            android:exported="true" />
+            android:name=".RateCalcActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
+        <activity
+            android:name=".rate_list_activity2"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        -->
         <activity
             android:name=".rate_list"
             android:exported="true" />
